--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.rtl.min.css" integrity="sha384-+4j30LffJ4tgIMrq9CwHvn0NjEvmuDCOfk6Rpg2xg7zgOxWWtLtozDEEVvBPgHqE" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
+    
     <title>Scroll web</title>
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">
+          <i class="bi bi-cast"></i>
+          <span class="pe-1">Navbar</span>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarbtn" aria-controls="navbarbtn" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +42,6 @@
       </div>
     </nav>
     <!-- Navbar -->
-
     <!-- Slider -->
     <section id="home">
       <div id="carouselControl" class="carousel slide" data-bs-ride="carousel">
@@ -65,6 +67,34 @@
       </div>
     </section>
     <!-- Slider -->
+    <!-- Services -->
+    <main class="bg-dark text-white py-5" id="services">
+      <div class="container">
+        <div class="text-center pb-3">
+          <i class="bi bi-lightning h4"></i>
+          <i class="bi bi-lightning h4"></i>
+          <i class="bi bi-lightning h4"></i>
+          <i class="bi bi-lightning h4"></i>
+        </div>
+        <h2 class="text-center display-4 mb-4">Services</h2>
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h5>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore dolores quas sunt quasi incidunt nulla et ipsa? Sed excepturi obcaecati doloremque blanditiis cum unde aspernatur iste! Molestiae adipisci voluptatibus asperiores?</p>
+            <button
+            class="btn btn-outline-light mb-3 mb-lg-0"
+            >Suscribe</button>
+          </div>
+          <div class="col-12 col-lg-8">
+            <img src="resources/services-1.jpg" alt="" class="img-fluid rounded">
+          </div>
+        </div>
+        <h1 class="py-5 display-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda ipsa ad quia saepe magnam, eum deleniti officiis? Officia iste inventore, quos laborum aut dolore minima quasi magni? Deleniti, recusandae tempora!</h1>
+      </div>
+    </main>
+    <!-- Services -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
