--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <i class="bi bi-cast"></i>
+          <i class="bi bi-bookmark"></i>
           <span class="pe-1">Navbar</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarbtn" aria-controls="navbarbtn" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarbtn">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#ho|me">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#services">Services</a>
@@ -77,7 +77,7 @@
           <i class="bi bi-lightning h4"></i>
         </div>
         <h2 class="text-center display-4 mb-4">Services</h2>
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-12 col-lg-4">
             <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h5>
             <hr>
@@ -90,11 +90,138 @@
             <img src="resources/services-1.jpg" alt="" class="img-fluid rounded">
           </div>
         </div>
-        <h1 class="py-5 display-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda ipsa ad quia saepe magnam, eum deleniti officiis? Officia iste inventore, quos laborum aut dolore minima quasi magni? Deleniti, recusandae tempora!</h1>
+        <h1 class="py-4 display-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda ipsa ad quia saepe magnam, eum deleniti officiis? Officia iste inventore, quos laborum aut dolore minima quasi magni? Deleniti, recusandae tempora!</h1>
       </div>
     </main>
     <!-- Services -->
-
+    <!-- Comments -->
+    <section id="comments" class="py-4 bg-light">
+      <div class="container">
+        <div class="text-center pb-2">
+          <i class="bi bi-chat-quote h4"></i>
+          <i class="bi bi-chat-quote h4"></i>
+          <i class="bi bi-chat-quote h4"></i>
+        </div>
+        <h2 class="text-center display-4 mb-4">Comments</h2>
+        <p class="Lead mb-4 text-center">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam vero architecto voluptas perferendis sed explicabo! Voluptates, aspernatur, ipsam corrupti odit sit nobis omnis maiores asperiores quo facere illum, sapiente maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore aperiam, facilis debitis laborum veritatis officia earum repellat ipsa architecto consequuntur possimus neque nemo a tenetur veniam? Nobis fugit veritatis ex?</p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+              <img src="resources/comments-1.jpg" alt="" class="img-fluid">
+          </div>
+          <div class="col-12 col-md-6 col-lg-8 col-xl-9">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ducimus tempora ullam commodi eos.</p>
+            <div class="accordion" id="accordion">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Accordion Item #1
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ad, suscipit, aliquam quam cum iusto nam nisi quasi illo fugiat rerum sit iste, voluptates et excepturi nihil quod animi natus?
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Accordion Item #2
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, nemo beatae consectetur, architecto vel quibusdam deleniti aut reprehenderit, eligendi quia perspiciatis qui voluptatem quis reiciendis libero cum possimus ducimus soluta.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Accordion Item #3
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
+                  <div class="accordion-body">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ad sed voluptas ipsum beatae ut eaque at id dolorum repellendus, magni nostrum fugit quis optio pariatur tempora quibusdam rem corrupti!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Comments -->
+    <!-- Suscribe -->
+    <div class="container text-center d-flex flex-column height justify-content-center" id="suscribe">
+      <h1 class="display-4 mb-4">Lista de precios</h1>
+      <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos odit nihil ea commodi error inventore vitae? Accusantium, aut aliquid provident magnam numquam nesciunt esse quam vitae ex. Qui, et cumque!</p>
+      <div class="row mt-2">
+        <article class="col-12 col-md-4 mb-5 mb-md-0">
+          <div class="border border-3 border-dark rounded">
+              <p class="mt-5">Basic</p>
+              <h2 class="display-3">$100</h2>
+              <p class="font-monospace mt-3">Lorem ipsum dolor sit amet.</p>
+              <ul class="list-unstyled my-4 text-end ps-2">
+                  <li>✔️ Lorem, ipsum dolor.</li>
+                  <li>✔️ Lorem ipsum dolor sit amet.</li>
+                  <li>✔️ Lorem ipsum dolor facere.</li>
+                  <li class="text-decoration-line-through">❌ Lorem ipsum, dolor sit amet consectetur.</li>
+                  <li class="text-decoration-line-through">❌ Lorem, ipsum.</li>
+                  <li class="text-decoration-line-through">❌ Lorem ipsum dolor sit amet adipisicing.</li>
+                  <li class="text-decoration-line-through">❌ Lorem ipsum dolor sit.</li>
+                  <li class="text-decoration-line-through">❌ Lorem ipsum dolor sit amet reprehenderit.</li>
+                  <li class="text-decoration-line-through">❌ Lorem, ipsum quo.</li>
+              </ul>
+              <a href="#" class="bg-info text-white d-block py-2 text-decoration-none">Acceder</a>
+          </div>
+        </article>
+        <article class="col-12 col-md-4 mb-5 mb-md-0">
+          <div class="border border-3 border-dark rounded bg-dark text-white">
+              <p class="mt-5 fw-semibold">Pro</p>
+              <h2 class="display-3">$200</h2>
+              <p class="font-monospace mt-3">Lorem ipsum dolor sit amet.</p>
+              <ul class="list-unstyled my-4 text-end ps-2">
+                  <li>✔️ Lorem, ipsum dolor.</li>
+                  <li>✔️ Lorem ipsum dolor sit amet.</li>
+                  <li>✔️ Lorem ipsum dolor facere.</li>
+                  <li>✔️ Lorem ipsum, dolor sit amet consectetur.</li>
+                  <li>✔️ Lorem, ipsum.</li>
+                  <li>✔️ Lorem ipsum dolor sit amet adipisicing.</li>
+                  <li class="text-decoration-line-through">❌ Lorem ipsum dolor sit.</li>
+                  <li class="text-decoration-line-through">❌ Lorem ipsum dolor sit amet reprehenderit.</li>
+                  <li class="text-decoration-line-through">❌ Lorem, ipsum quo.</li>
+              </ul>
+              <a href="#" class="bg-secondary text-white d-block py-2 text-decoration-none">Acceder</a>
+          </div>
+        </article>
+        <article class="col-12 col-md-4 mb-4">
+          <div class="border border-3 border-dark bg-warning rounded">
+              <p class="mt-5 fw-bold text-decoration-underline">Executive</p>
+              <h2 class="display-3 fw-bold">$500</h2>
+              <p class="font-monospace mt-3">Lorem ipsum dolor sit amet.</p>
+              <ul class="list-unstyled my-4 text-end ps-2">
+                  <li>✔️ Lorem, ipsum dolor.</li>
+                  <li>✔️ Lorem ipsum dolor sit amet.</li>
+                  <li>✔️ Lorem ipsum dolor facere.</li>
+                  <li>✔️ Lorem ipsum, dolor sit amet consectetur.</li>
+                  <li>✔️ Lorem, ipsum.</li>
+                  <li>✔️ Lorem ipsum dolor sit amet adipisicing.</li>
+                  <li>✔️ Lorem ipsum dolor sit.</li>
+                  <li>✔️ Lorem ipsum dolor sit amet reprehenderit.</li>
+                  <li>✔️ Lorem, ipsum quo.</li>
+              </ul>
+              <a href="#" class="bg-dark text-white d-block py-2 text-decoration-none">Acceder</a>
+          </div>
+        </article>
+      </div>
+      <footer>
+        <p class="fs-6 lead ">Lorem ipsum dolor sit amet consectetur adipisicing elit ©</p>
+      </footer>
+    </div>
+    <!-- Suscribe -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
