--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   data-bs-root-margin="0px 0px -40%" 
   data-bs-smooth-scroll="true" 
   class="scrollspy-example bg-light p-3 rounded-2" 
-  tabindex="0"
-  >
+  tabindex="0">
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top" id="navbar">
       <div class="container">
@@ -50,7 +49,7 @@
     </nav>
     <!-- Navbar -->
     <!-- Slider -->
-    <section id="home">
+    <section id="home" class="mt-5">
       <div id="carouselControl" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -119,7 +118,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ducimus tempora ullam commodi eos.</p>
             <div class="accordion" id="accordion">
               <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
+                <h2 class="accordion-header ps-auto" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     Accordion Item #1
                   </button>
@@ -257,7 +256,7 @@
     </section>
     <!-- Suscribe -->
     <!-- Footer -->
-    <footer class="container-fluid bg-dark text-center text-light py-3">
+    <footer class="container-fluid bg-dark text-center text-light pt-3 pb-1">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nostrum beatae asperiores tempora excepturi fuga voluptates atque earum eligendi pariatur vitae expedita iusto maxime qui repellat sapiente, repellendus provident tenetur!</p>
     </footer>
     <!-- Footer -->
